# condense-trainer

./: inference.py  pyproject.toml  requirements.txt  train.py
compress/: __init__.py  callbacks.py  lit.py  trainer.py
compress/data/: __init__.py  load_dataset.py  pretrain_dataset.py
compress/modeling/: __init__.py  causal_lm.py
compress/modeling/objectives/: __init__.py  auto_encoding.py  completing.py
condense_trainer_core/: __init__.py  callbacks.py  compressor.py  condense_core.py  condense_trainer.py  objectives.py
condense_trainer_core/data/: __init__.py  load_processed_dataset.py  subnet_synthetic_dataset.py  text_dataset.py
condense_trainer_core/models/: __init__.py
config/: test.yaml  train_config.yaml
