[project]
name = "condense-trainer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "lightning",
    "transformers",
    "datasets",
    "wandb",
    "peft",
    "hf_transfer",
    "cut-cross-entropy @ git+https://github.com/apple/ml-cross-entropy.git",
]
